--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase-tools": "^12.9.1",
     "ngx-toast": "^1.1.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
